@@ -1,0 +1,31 @@
+<HTML>
+<head>
+<title> TrioCFD index </title>
+</head>
+<body>
+<PRE>
+<HR><h1> TrioCFD Version TRUSTV </h1><HR>
+<img src=share/doc/TrioCFD.png></PRE>
+<UL><BR>
+<B>TrioCFD documentation</B><BR>
+<a HREF=share/RELEASE_NOTES>Release notes</a><BR>
+<a HREF=share/doc/TRUST_Generic_Guide.pdf>Generic guide</a><BR>
+<a HREF=share/doc/TrioCFD_Reference_Manual.pdf>Reference manual</a><BR>
+<a HREF=share/doc/TrioCFD_Reference_Manual.pdf>Validation document</a><BR><BR>
+<B>TRUST/TrioCFD user ressources</B><BR>
+<a HREF=TRUSTR/doc/TRUST/TRUST_tutorial.pdf>User tutorial</a><BR><BR>
+<B>TRUST/TrioCFD developer ressources</B><BR>
+<a HREF=TRUSTR/doc/TRUST/Baltik_tutorial.pdf>Developer tutorial</a><BR>
+<a HREF=TRUSTR/doc/TRUST/ICoCo_tutorial.pdf>ICoCo tutorial</a><BR>
+<a HREF=TRUSTR/doc/TRUST/exercices/equation_convection_diffusion/rapport.pdf>Other baltik tutorial</a><BR>
+<a HREF=build/html/index.html>C++ classes</a><BR><BR>
+<B>TRUST index</B><BR>
+<a href=TRUSTR/index.html>Link to TRUST index</a><BR><BR>
+<B>TrioCFD download & support</B><BR>
+<a HREF=http://triocfd.cea.fr>WEB site</a><BR>
+<a HREF=mailto:trust@cea.fr>Contact support</a><BR><BR>
+</UL>
+<BR>
+<HR>
+</body>
+</html>
