@@ -1,6 +1,8 @@
 --------------------------------------------------------------------------------------------------
 Release notes version 1.8.2_beta : Enhancements, modifications and corrected bugs since version 1.8.1 :
 --------------------------------------------------------------------------------------------------
+xx/11/20 (TrioCFD) New feature : triocfd -index gives now access to html index of TrioCFD.
+xx/11/20 (TrioCFD) New feature : Adding triocfd script that overloads trust script.
 03/11/20 (TrioCFD) Bug fixed   : Disabling a loop vectorization in Shih_Zhu_Lumley_VDF model to avoid crash on intel compilers
 30/10/20 (TrioCFD) Change      : Add a missing term in the deformation tensor for non-uniform viscosity in VDF (laminar or turbulent flow)
 30/10/20 (TrioCFD) Change      : Remove -2/3*k remaining terms in the previous operators to be conform for all diffusive operators (VDF, VEF, uniform or not, axi or not) 
